tests/algorithms/x/Java/data_structures/binary_tree/binary_tree_node_sum.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden176_binary_tree_node_sum2161401694/001/Main.java:21: error: incompatible types: int cannot be converted to BigInteger
            return 0;
                   ^
/tmp/TestJavaTranspiler_Algorithms_Golden176_binary_tree_node_sum2161401694/001/Main.java:30: error: incompatible types: int cannot be converted to BigInteger
            example = ((Node[])(new Node[]{new Node(10, 1, 2), new Node(5, 3, (java.math.BigInteger.valueOf(1)).negate()), new Node((java.math.BigInteger.valueOf(3)).negate(), 4, 5), new Node(12, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate()), new Node(8, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate()), new Node(0, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate())}));
                                                    ^
/tmp/TestJavaTranspiler_Algorithms_Golden176_binary_tree_node_sum2161401694/001/Main.java:30: error: incompatible types: int cannot be converted to BigInteger
            example = ((Node[])(new Node[]{new Node(10, 1, 2), new Node(5, 3, (java.math.BigInteger.valueOf(1)).negate()), new Node((java.math.BigInteger.valueOf(3)).negate(), 4, 5), new Node(12, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate()), new Node(8, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate()), new Node(0, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate())}));
                                                                        ^
/tmp/TestJavaTranspiler_Algorithms_Golden176_binary_tree_node_sum2161401694/001/Main.java:30: error: incompatible types: int cannot be converted to BigInteger
            example = ((Node[])(new Node[]{new Node(10, 1, 2), new Node(5, 3, (java.math.BigInteger.valueOf(1)).negate()), new Node((java.math.BigInteger.valueOf(3)).negate(), 4, 5), new Node(12, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate()), new Node(8, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate()), new Node(0, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate())}));
                                                                                                                                                                                ^
/tmp/TestJavaTranspiler_Algorithms_Golden176_binary_tree_node_sum2161401694/001/Main.java:30: error: incompatible types: int cannot be converted to BigInteger
            example = ((Node[])(new Node[]{new Node(10, 1, 2), new Node(5, 3, (java.math.BigInteger.valueOf(1)).negate()), new Node((java.math.BigInteger.valueOf(3)).negate(), 4, 5), new Node(12, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate()), new Node(8, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate()), new Node(0, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate())}));
                                                                                                                                                                                                ^
/tmp/TestJavaTranspiler_Algorithms_Golden176_binary_tree_node_sum2161401694/001/Main.java:30: error: incompatible types: int cannot be converted to BigInteger
            example = ((Node[])(new Node[]{new Node(10, 1, 2), new Node(5, 3, (java.math.BigInteger.valueOf(1)).negate()), new Node((java.math.BigInteger.valueOf(3)).negate(), 4, 5), new Node(12, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate()), new Node(8, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate()), new Node(0, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate())}));
                                                                                                                                                                                                                                                                                                      ^
/tmp/TestJavaTranspiler_Algorithms_Golden176_binary_tree_node_sum2161401694/001/Main.java:30: error: incompatible types: int cannot be converted to BigInteger
            example = ((Node[])(new Node[]{new Node(10, 1, 2), new Node(5, 3, (java.math.BigInteger.valueOf(1)).negate()), new Node((java.math.BigInteger.valueOf(3)).negate(), 4, 5), new Node(12, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate()), new Node(8, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate()), new Node(0, (java.math.BigInteger.valueOf(1)).negate(), (java.math.BigInteger.valueOf(1)).negate())}));
                                                                                                                                                                                                                                                                                                                                                                                                           ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
7 errors
